add footer and primary and secondary color

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,5 +8,6 @@
   --radius: 0.125rem;
   --tracking-superwide: .4rem;
   --border-width-thin: 1px;
-
+  --color-primary: #f84f04;
+  --color-secondary: #ffe4c4;
 }
