--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,8 @@
   --radius: 0.125rem;
   --tracking-superwide: .4rem;
   --border-width-thin: 1px;
-  --color-primary: #f84f04;
-  --color-secondary: #ffe4c4;
+  --color-primary: #FFFDD0;
+  --color-secondary: #9D624B;
+  --color-accent1: #C6AA77;
+  --color-accent2: #706F6C;
 }
