update cart system

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,8 @@
   --text-xxs: 0.6rem;
   --text-md: 1rem;
   --radius: 0.125rem;
-  --tracking-superwide: .4rem;
+  --tracking-superwide: .3rem;
+  --tracking-superwider: .4rem;
   --border-width-thin: 1px;
   --color-primary: #FFFDD0;
   --color-secondary: #9D624B;
